<resources>
    <string name="app_name">Github Client</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Texto de prueba</string>
    <string name="image_description">Imagen del dueño del repositorio</string>
    <string name="logo_description">Logo del proyecto</string>

    <string name="fab_add_task">Agregar Tarea</string>
    <string name="title_new_project">Nuevo Proyecto</string>
    <string name="hint_new_project_name">Nombre del repositorio</string>
    <string name="hint_new_project_details">Detalles del repositorio</string>
    <string name="btn_save">Guardar</string>
    <string name="msg_project_saved_ok">Repositorio guardado con éxito</string>

</resources>