<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?android:attr/colorBackground"
    android:clickable="true"
    android:focusable="true">

    <!-- Campo Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_new_project_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Descripción -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewProjectDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_new_project_details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewProjectDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Crear -->
    <Button
        android:id="@+id/btnSaveNewProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_save"/>

</LinearLayout>